Added ConnectionString in appsettings

--- a/Statch/appsettings.Development.json
+++ b/Statch/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "StatchConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Statch_DB;Integrated Security=True;"
   }
 }
