--- a/Statch/appsettings.json
+++ b/Statch/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "StatchConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Statch_DB;Integrated Security=True;"
+  }
 }
