--- a/Statch/Statch.csproj
+++ b/Statch/Statch.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <Folder Include="DAL\" />
-    <Folder Include="Views\User\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
